--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/drink.jpg" alt="">
+                  <img src="images/drink.jpg" width="315px" height="315px" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
