--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <h2>
           Our Menu
         </h2>
-        <a href="https://wa.me/96170076074" class="order_online">
+        <a href="https://wa.me/96176008077" class="order_online">
                 Order Online
               </a>
               <!-- <img src="images/logo.jpeg" width="200px" height="200px">
@@ -1187,11 +1187,11 @@
               Hawka - Monastry Saint Antonios Kozhaya
             </p>
             <div class="footer_social">
-              <a href="">
+              <a href="https://www.facebook.com/profile.php?id=100048592728767&mibextid=LQQJ4d">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
              
-              <a href="">
+              <a href="https://instagram.com/restaurant.challita?igshid=YWJhMjlhZTc=">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
                   </div>
