--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                   <p>
                     <b> شقف غنم كيلو 12 شيش</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $18<br></br>
                     <b>ريش غنم 10 قطع</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; $23<br></br>
-                    <b>مشاوي مشكل 12 شيش</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $17<br></br>
+                    <b>مشاوي مشكل 12 شيش</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $24<br></br>
                     <b>طاووق كيلو 10 شيش</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $13<br></br>
                     <b>كفتة كيلو</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $14<br></br>
                     <b>فروج</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $8<br></br>
@@ -698,7 +698,7 @@
                     &emsp;&emsp;&emsp;&emsp;مشروبات ساخنة و باردة<br></br>
                   </h5>
                   <p>
-                    <b>مرطبات</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $0.7<br></br>
+                    <b>مرطبات</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; $1 <br></br>
                     1.8$&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <b>Perrier</b> <br></br>
                     <b>ماء صحة كبير</b> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; $0.7<br></br>
                     <b>عصير ليمون</b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp; $0.7<br></br>
@@ -953,7 +953,7 @@
             <p>
              
               <tr>
-                <td><br></br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;2.5$&emsp;&emsp;&emsp;&emsp;&emsp;<b>أرغيلة</b></td>
+                <td><br></br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;$3&emsp;&emsp;&emsp;&emsp;&emsp;<b>أرغيلة</b></td>
                  </tr>
              </p>
             <div class="options">
